--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:id="@+id/imageView_com_logo"
+            android:id="@+id/imageView_companyLogo"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:src="@drawable/image" />
@@ -21,7 +21,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageView_com_logo"
+            android:layout_below="@+id/imageView_companyLogo"
             android:id="@+id/cardView_name"
             android:layout_marginTop="5dp">
             <LinearLayout
@@ -125,7 +125,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
 
-                    android:id="@+id/editText_designation"
+                    android:id="@+id/editText_jobDescription"
                     android:singleLine="true"
                     android:layout_below="@+id/textView_desig"
                     android:layout_marginTop="5dp"
@@ -133,7 +133,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/editText_designation"
+                    android:layout_below="@id/editText_jobDescription"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Company"
                     android:id="@+id/textView_company"/>
@@ -210,8 +210,8 @@
                     android:textAppearance="?android:textAppearanceMedium"
                     android:id="@+id/ediText_home"
                     android:layout_below="@+id/info_text"
-                    android:layout_alignLeft="@+id/editText_location6"
-                    android:layout_alignStart="@+id/editText_location6"
+                    android:layout_alignLeft="@+id/editText_jobLocation"
+                    android:layout_alignStart="@+id/editText_jobLocation"
                     android:layout_marginTop="5dp" />
 
                 <ImageView
@@ -220,7 +220,7 @@
                     android:id="@+id/imageView_work"
                     android:src="@drawable/work"
                     android:padding="0dp"
-                    android:layout_alignTop="@+id/editText_location6"
+                    android:layout_alignTop="@+id/editText_jobLocation"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="10dp" />
@@ -238,7 +238,7 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editText_location6"
+                    android:id="@+id/editText_jobLocation"
                     android:layout_below="@+id/ediText_home"
                     android:layout_toRightOf="@+id/imageView_work"
                     android:layout_toEndOf="@+id/imageView_work"
@@ -288,7 +288,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="https://twitter.com/"
-                    android:id="@+id/editText_twlink"
+                    android:id="@+id/textView_twitterlink"
                     android:singleLine="true"
 
                     android:layout_below="@+id/textView_Contact"
@@ -304,11 +304,11 @@
                     android:hint="Email"
                     android:singleLine="true"
                     android:inputType="textEmailAddress"
-                    android:id="@+id/editText_mail"
+                    android:id="@+id/textView_fbLink"
 
-                    android:layout_below="@+id/editText_twlink"
-                    android:layout_alignLeft="@+id/editText_twlink"
-                    android:layout_alignStart="@+id/editText_twlink"
+                    android:layout_below="@+id/textView_twitterlink"
+                    android:layout_alignLeft="@+id/textView_twitterlink"
+                    android:layout_alignStart="@+id/textView_twitterlink"
                     android:layout_marginTop="5dp"
                     android:text="e-mail" />
 
@@ -319,8 +319,8 @@
                     android:hint="Contact"
                     android:inputType="phone"
 
-                    android:id="@+id/editText_contact"
-                    android:layout_below="@+id/editText_mail"
+                    android:id="@+id/textView_contact"
+                    android:layout_below="@+id/textView_fbLink"
                     android:layout_toRightOf="@+id/imageView_fb"
                     android:layout_toEndOf="@+id/imageView_fb"
                     android:layout_marginLeft="10dp"
@@ -335,27 +335,27 @@
                     android:layout_height="20dp"
                     android:id="@+id/imageView_fb"
                     android:src="@drawable/tw"
-                    android:layout_alignTop="@+id/editText_twlink"
+                    android:layout_alignTop="@+id/textView_twitterlink"
                     android:layout_alignLeft="@+id/textView_Contact"
                     android:layout_alignStart="@+id/textView_Contact"
                     android:layout_marginTop="10dp" />
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:id="@+id/imageView_tw"
+                    android:id="@+id/imageView_phone"
                     android:src="@drawable/ph"
-                    android:layout_alignTop="@+id/editText_contact"
-                    android:layout_toLeftOf="@+id/editText_contact"
-                    android:layout_toStartOf="@+id/editText_contact"
+                    android:layout_alignTop="@+id/textView_contact"
+                    android:layout_toLeftOf="@+id/textView_contact"
+                    android:layout_toStartOf="@+id/textView_contact"
                     android:layout_marginTop="10dp" />
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:id="@+id/imageView_in"
+                    android:id="@+id/imageView_email"
                     android:src="@drawable/mail"
-                    android:layout_alignTop="@+id/editText_mail"
-                    android:layout_toLeftOf="@+id/editText_twlink"
-                    android:layout_toStartOf="@+id/editText_twlink"
+                    android:layout_alignTop="@+id/textView_fbLink"
+                    android:layout_toLeftOf="@+id/textView_twitterlink"
+                    android:layout_toStartOf="@+id/textView_twitterlink"
                     android:layout_marginTop="10dp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
