--- a/app/src/main/res/layout/post_job.xml
+++ b/app/src/main/res/layout/post_job.xml
@@ -2,6 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:scrollbars="none"
     android:padding="5dp">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -10,14 +12,14 @@
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:id="@+id/imageView_com_logo"
+            android:id="@+id/imageView_companyLogo"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:src="@drawable/image" />
         <android.support.v7.widget.CardView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageView_com_logo"
+            android:layout_below="@+id/imageView_companyLogo"
             android:id="@+id/cardView_name"
             android:layout_marginTop="5dp">
             <LinearLayout
@@ -33,38 +35,12 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/editText_com_name"
+                        android:id="@+id/editText_companyName"
                         android:hint="Name Of Company"/>
 
                 </android.support.design.widget.TextInputLayout>
 
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-                    <!--android:text="Name of Company"-->
-                    <!--/>-->
-                <!--<EditText-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!---->
-                    <!--android:layout_marginTop="5dp"-->
-                    <!--android:layout_marginBottom="5dp"-->
-                    <!--android:singleLine="true"-->
-                    <!--android:windowSoftInputMode="stateHidden"/>-->
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:id="@+id/textView_desc"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-                    <!--android:text="Description" />-->
-                <!--<EditText-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="60dp"-->
-                    <!---->
-                    <!--android:layout_weight="1.05"-->
-                    <!--android:layout_marginBottom="5dp"-->
-                    <!--android:layout_marginTop="5dp" />-->
+
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -72,7 +48,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
-                        android:id="@+id/Edittext_com_description"
+                        android:id="@+id/editText_companyDescription"
                         android:hint="Description of Company"/>
 
                 </android.support.design.widget.TextInputLayout>
@@ -118,7 +94,7 @@
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                    android:id="@+id/editText_designation"
+                    android:id="@+id/editText_jobDescription"
                         android:hint="Description of Job"/>
 
                 </android.support.design.widget.TextInputLayout>
@@ -133,28 +109,27 @@
                 <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    card_view:iiv_color="@color/black_de"
-                    android:src="@color/black_de"
-                    card_view:iiv_icon="faw-map-marke"
+                    app:iiv_icon="faw-map-marker"
+                    app:iiv_color="@color/black_de"
                     android:layout_below="@+id/textInputLayout_jobDescription"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginTop="20dp" />
+                    android:layout_marginTop="20dp"
+                    android:id="@+id/view16" />
+
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/view15"
-                    android:backgroundTintMode=""
                     android:layout_below="@+id/textInputLayout_jobDescription"
                     android:layout_alignParentBottom="true"
-                    android:layout_alignLeft="@+id/textInputLayout_jobDescription"
-                    android:layout_alignStart="@+id/textInputLayout_jobDescription">
+                    android:layout_toRightOf="@+id/view16"
+                    android:layout_toEndOf="@+id/view16">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="30dp"
-                        android:id="@+id/edit"
+                        android:layout_marginLeft="10dp"
+                        android:id="@+id/editText_jobLocation"
                         android:hint="Location"/>
 
                 </android.support.design.widget.TextInputLayout>
@@ -205,97 +180,105 @@
                     android:layout_marginTop="10dp" />
 
                 <!-- Edit text of new twitter -->
+
+
+
+
+                <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:hint="Email"-->
+                    <!--android:singleLine="true"-->
+                    <!--android:inputType="textEmailAddress"-->
+                    <!--android:id="@+id/editText_mail"-->
+                    <!--android:layout_below="@+id/textInputLayout_twitter"-->
+                     <!--android:layout_marginTop="5dp" />-->
+
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textInputLayout_twitter"
+                    android:id="@+id/textView_fbLink"
+                    android:layout_toRightOf="@+id/imageView_email"
                     android:layout_below="@+id/textView_Contact">
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/editText_twlink"
-                        android:hint=""/>
+                        android:layout_marginLeft="10dp"
+                        android:id="@+id/editText_companyEmail"
+                        android:hint="e-mail address"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView_contact"
+                    android:layout_toRightOf="@+id/imageView_email"
+                    android:layout_below="@+id/textView_fbLink">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:id="@+id/editText_companyPhone"
+                        android:hint="Phone Number"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_toRightOf="@+id/imageView_email"
+                    android:layout_below="@+id/textView_contact">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:id="@+id/editText_companyWebLink"
+                        android:hint="Web Links"/>
 
                 </android.support.design.widget.TextInputLayout>
 
 
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Email"
-                    android:singleLine="true"
-                    android:inputType="textEmailAddress"
-                    android:id="@+id/editText_mail"
-
-                    android:layout_below="@+id/textInputLayout_twitter"
-                     android:layout_marginTop="5dp" />
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:hint="Contact"
-                    android:inputType="phone"
-
-                    android:id="@+id/editText_contact"
-                    android:layout_below="@+id/editText_mail"
-                    android:layout_toRightOf="@+id/imageView_fb"
-                    android:layout_toEndOf="@+id/imageView_fb"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="5dp" />
-
 
                 <!-- image of new twitter -->
-                <ImageView
+
+                <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:id="@+id/imageView_fb"
-                    android:src="@drawable/tw"
-                    android:layout_alignTop="@+id/editText_twlink"
-                    android:layout_alignLeft="@+id/textView_Contact"
-                    android:layout_alignStart="@+id/textView_Contact"
-                    android:layout_marginTop="10dp" />
-                <ImageView
+                    android:id="@+id/imageView_phone"
+                    app:iiv_icon="faw-phone"
+                    app:iiv_color="@color/black_de"
+                    android:layout_alignTop="@+id/textView_contact"
+                    android:layout_toLeftOf="@+id/textView_contact"
+                    android:layout_toStartOf="@+id/textView_contact"
+                    android:layout_marginTop="20dp" />
+                <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:id="@+id/imageView_tw"
-                    android:src="@drawable/ph"
-                    android:layout_alignTop="@+id/editText_contact"
-                    android:layout_toLeftOf="@+id/editText_contact"
-                    android:layout_toStartOf="@+id/editText_contact"
-                    android:layout_marginTop="10dp" />
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:id="@+id/imageView_in"
-                    android:src="@drawable/mail"
-                    android:layout_alignTop="@+id/editText_mail"
+                    android:id="@+id/imageView_email"
+                    app:iiv_icon="faw-envelope"
+                    app:iiv_color="@color/black_de"
+                    android:layout_alignTop="@+id/textView_fbLink"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginTop="10dp" />
+                    android:layout_marginTop="20dp" />
 
-                <ImageView
+                <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:id="@+id/imageView3"
-                    android:src="@drawable/website"
+                    android:id="@+id/icon_webLink"
+                    app:iiv_icon="faw-link"
+                    app:iiv_color="@color/black_de"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_below="@+id/editText_contact"
-                    android:layout_marginTop="10dp" />
+                    android:layout_below="@+id/textView_contact"
+                    android:layout_marginTop="20dp" />
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editText2"
-                    android:text="www."
-                    android:layout_below="@id/editText_contact"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignLeft="@+id/editText_contact"
-                    android:layout_alignStart="@+id/editText_contact" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
     </RelativeLayout>
