--- a/app/src/main/res/layout/fragment_job_details.xml
+++ b/app/src/main/res/layout/fragment_job_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:scrollbars="none"
@@ -149,16 +150,17 @@
                     android:layout_marginBottom="5dp"/>
 
 
-                <ImageView
+                <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:id="@+id/imageView_fb"
-                    android:src="@drawable/tw"
+                    app:iiv_icon="faw-twitter"
+                    app:iiv_color="@color/black_de"
                     android:layout_alignTop="@+id/textView_twitterlink"
                     android:layout_alignLeft="@+id/imageView_email"
                     android:layout_alignStart="@+id/imageView_email"
                     android:layout_marginTop="2dp" />
-                <ImageView
+                <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:id="@+id/imageView_phone"
@@ -167,11 +169,12 @@
                     android:layout_alignLeft="@+id/imageView_email"
                     android:layout_alignStart="@+id/imageView_email"
                     android:layout_marginTop="2dp" />
-                <ImageView
+                <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:id="@+id/imageView_email"
-                    android:src="@drawable/mail"
+                    app:iiv_icon="faw-envelope"
+                    app:iiv_color="@color/black_de"
                     android:layout_alignTop="@+id/textView_fbLink"
                     android:layout_alignLeft="@+id/textView_Contact"
                     android:layout_alignStart="@+id/textView_Contact"
@@ -189,11 +192,12 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp" />
 
-        <ImageView
+        <com.mikepenz.iconics.view.IconicsImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:id="@+id/imageView"
-            android:src="@drawable/location"
+            app:iiv_icon="faw-map-marker"
+            app:iiv_color="@color/black_de"
             android:layout_alignBottom="@+id/textView_branch"
             android:layout_toLeftOf="@+id/textView_branch"
             android:layout_toStartOf="@+id/textView_branch"
