--- a/app/src/main/res/layout/fragment_job_details.xml
+++ b/app/src/main/res/layout/fragment_job_details.xml
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Location"
+            android:text="@string/location"
             android:id="@+id/textView_branch"
             android:layout_below="@+id/textView_desigNCom"
             android:layout_centerHorizontal="true"
@@ -160,12 +160,13 @@
                     android:layout_alignLeft="@+id/imageView_email"
                     android:layout_alignStart="@+id/imageView_email"
                     android:layout_marginTop="2dp" />
-                <com.mikepenz.iconics.view.IconicsImageView
+                 <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:id="@+id/imageView_phone"
-                    android:src="@drawable/website"
-                    android:layout_alignTop="@+id/textView_contact"
+                     app:iiv_icon="faw-link"
+                     app:iiv_color="@color/black_de"
+                     android:layout_alignTop="@+id/textView_contact"
                     android:layout_alignLeft="@+id/imageView_email"
                     android:layout_alignStart="@+id/imageView_email"
                     android:layout_marginTop="2dp" />
