--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -35,9 +35,10 @@
         <com.mikepenz.iconics.view.IconicsImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_margin="5dp"
             app:iiv_icon="faw-pencil-square-o"
             app:iiv_color="@color/black_de"
-            android:id="@+id/edit_imageButton"
+            android:id="@+id/imageView_edit"
             android:background="@android:color/transparent"
             android:layout_below="@+id/textView_year"
             android:layout_alignRight="@+id/textView_bio"
@@ -88,7 +89,6 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
         <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -107,12 +107,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:textAppearanceMedium"
-                    android:text="Location"
+                    android:text="@string/location"
                     android:layout_margin="5dp" />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
-                    android:background="#a6a6a6"
+                    android:background="@color/grey"
                     android:layout_below="@id/info_text" />
 
                 <TextView
@@ -129,7 +129,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
-                    android:background="#a6a6a6"
+                    android:background="@color/grey"
                     android:layout_toEndOf="@+id/imageView_work"
                     android:layout_toRightOf="@id/imageView_work"
                     android:layout_marginBottom="5dp"
@@ -202,8 +202,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:textAppearanceMedium"
-                    android:text="Contact"
-
+                    android:text="@string/contact"
+                    android:layout_margin="5dp"
                     android:id="@+id/textView_Contact"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true" />
@@ -211,7 +211,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="1px"
-                    android:background="#a6a6a6"
+                    android:background="@color/grey"
                     android:layout_below="@id/textView_Contact" />
 
                 <TextView
@@ -230,7 +230,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
-                    android:background="#a6a6a6"
+                    android:background="@color/grey"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:layout_below="@+id/imageView_fb"
@@ -253,7 +253,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
-                    android:background="#a6a6a6"
+                    android:background="@color/grey"
                     android:layout_toEndOf="@+id/imageView_email"
                     android:layout_toRightOf="@id/imageView_email"
                     android:layout_below="@+id/textView_fbLink"
@@ -275,7 +275,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
-                    android:background="#a6a6a6"
+                    android:background="@color/grey"
                     android:layout_toEndOf="@+id/imageView_email"
                     android:layout_toRightOf="@id/imageView_email"
                     android:layout_below="@+id/textView_contact"
