view pager implementation , app crashing

--- a/app/src/main/res/layout/fragment_aboutapp.xml
+++ b/app/src/main/res/layout/fragment_aboutapp.xml
@@ -20,8 +20,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="1.0"
-                android:id="@+id/textView"
+                android:text=""
+                android:id="@+id/textView_version"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Designed &amp; Developed By Arya"
+        android:text="@string/developed_by"
         android:id="@+id/textView3"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
