--- a/app/src/main/res/layout/activity_member.xml
+++ b/app/src/main/res/layout/activity_member.xml
@@ -11,7 +11,7 @@
         android:id="@+id/view">
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
+            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#e53935"
@@ -25,15 +25,6 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_below="@+id/view"
-        android:layout_above="@+id/include" />
-    <include
-        layout="@layout/fragment_menu_bottom"
-        android:id="@+id/include"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        >
-    </include>
+         />
+
 </RelativeLayout>
