--- a/app/src/main/res/layout/fragment_web_view.xml
+++ b/app/src/main/res/layout/fragment_web_view.xml
@@ -6,7 +6,8 @@
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="2px"
+        android:progressDrawable="@color/lite_blue"
+        android:layout_height="2dp"
         android:id="@+id/progressBar" />
 
     <WebView
