--- a/app/src/main/res/layout/fragment_post_job.xml
+++ b/app/src/main/res/layout/fragment_post_job.xml
@@ -55,7 +55,7 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+
             android:id="@+id/card_view_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,21 +71,8 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp">
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:text="Job Description"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-                    <!--android:id="@+id/textView_work"/>-->
 
-                <!--<EditText-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="100dp"-->
-                    <!--android:id="@+id/editText_designation"-->
-                    <!--android:layout_marginTop="5dp"-->
-                    <!--android:layout_marginBottom="5dp"-->
-                    <!--android:layout_below="@id/textView_work" />-->
-                <android.support.design.widget.TextInputLayout
+                   <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:id="@+id/textInputLayout_jobDescription"
                     android:layout_height="wrap_content">
@@ -97,15 +84,20 @@
                         android:hint="Description of Job"/>
 
                 </android.support.design.widget.TextInputLayout>
-                <!--<TextView-->
-                    <!--android:id="@+id/info_text"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-                    <!--android:text="Location"-->
-                    <!--android:layout_marginTop="5dp"-->
-                    <!--android:layout_below="@id/textInputLayout_jobDescription" />-->
-                <com.mikepenz.iconics.view.IconicsImageView
+                <!--<android.support.design.widget.TextInputLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:id="@+id/textInputLayout_JobType"-->
+                    <!--android:layout_height="wrap_content">-->
+
+                    <!--<android.support.design.widget.TextInputEditText-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="80dp"-->
+                        <!--android:id="@+id/editText_jobDescription"-->
+                        <!--android:hint="Description of Job"/>-->
+
+                <!--</android.support.design.widget.TextInputLayout>-->
+
+                 <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     app:iiv_icon="faw-map-marker"
@@ -133,21 +125,11 @@
 
                 </android.support.design.widget.TextInputLayout>
 
-                <!--<EditText-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:id="@+id/editText"-->
-                    <!--android:layout_below="@+id/info_text"-->
-                    <!--android:layout_toRightOf="@+id/imageView_work"-->
-                    <!--android:layout_toEndOf="@+id/imageView_work"-->
-                    <!--android:layout_marginLeft="10dp"-->
-                    <!--android:layout_marginTop="5dp" />-->
-
 
             </RelativeLayout>
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+
             android:id="@+id/card_view_contact"
             android:layout_gravity="center"
             android:layout_width="match_parent"
@@ -178,20 +160,6 @@
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="10dp" />
 
-                <!-- Edit text of new twitter -->
-
-
-
-
-                <!--<EditText-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:hint="Email"-->
-                    <!--android:singleLine="true"-->
-                    <!--android:inputType="textEmailAddress"-->
-                    <!--android:id="@+id/editText_mail"-->
-                    <!--android:layout_below="@+id/textInputLayout_twitter"-->
-                     <!--android:layout_marginTop="5dp" />-->
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -241,10 +209,6 @@
 
                 </android.support.design.widget.TextInputLayout>
 
-
-
-
-                <!-- image of new twitter -->
 
                 <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="20dp"
