--- a/app/src/main/res/layout/fragment_job_details.xml
+++ b/app/src/main/res/layout/fragment_job_details.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Company Name"
-            android:id="@+id/textView_name"
+            android:id="@+id/textView_company_name"
             android:layout_below="@+id/imageView_profilepic"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp" />
@@ -29,7 +29,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Type"
             android:id="@+id/textView_desigNCom"
-            android:layout_below="@+id/textView_name"
+            android:layout_below="@+id/textView_company_name"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp" />
 
@@ -70,13 +70,17 @@
             android:layout_below="@+id/textView_description"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp"
-            android:padding="5dp">
-            <TextView
-                android:layout_width="match_parent"
+            android:layout_marginTop="10dp">
+            <RelativeLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:text="Job  Description - khdblhboh ouyg ouygfuyg ouy gouyf giauygfiuy foauygf oasyufg ausoyfg asuydfg oasuyfg asuyfg siuyfgisu yfsi ufysf gsuyf g"/>
+                android:padding="5dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    android:text="Job  Description - khdblhboh ouyg ouygfuyg ouy gouyf giauygfiuy foauygf oasyufg ausoyfg asuydfg oasuyfg asuyfg siuyfgisu yfsi ufysf gsuyf g"/>
+            </RelativeLayout>
 
 
 
@@ -102,8 +106,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
                 android:nestedScrollingEnabled="false"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp">
+                android:padding="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -151,35 +154,35 @@
 
 
                 <com.mikepenz.iconics.view.IconicsImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:id="@+id/imageView_fb"
                     app:iiv_icon="faw-twitter"
                     app:iiv_color="@color/black_de"
                     android:layout_alignTop="@+id/textView_twitterlink"
                     android:layout_alignLeft="@+id/imageView_email"
                     android:layout_alignStart="@+id/imageView_email"
-                    android:layout_marginTop="2dp" />
+                     />
                  <com.mikepenz.iconics.view.IconicsImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:id="@+id/imageView_phone"
                      app:iiv_icon="faw-link"
                      app:iiv_color="@color/black_de"
                      android:layout_alignTop="@+id/textView_contact"
                     android:layout_alignLeft="@+id/imageView_email"
                     android:layout_alignStart="@+id/imageView_email"
-                    android:layout_marginTop="2dp" />
+                     />
                 <com.mikepenz.iconics.view.IconicsImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:id="@+id/imageView_email"
                     app:iiv_icon="faw-envelope"
                     app:iiv_color="@color/black_de"
                     android:layout_alignTop="@+id/textView_fbLink"
                     android:layout_alignLeft="@+id/textView_Contact"
                     android:layout_alignStart="@+id/textView_Contact"
-                    android:layout_marginTop="2dp" />
+                     />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
