--- a/app/src/main/res/layout/simple_list_item_job.xml
+++ b/app/src/main/res/layout/simple_list_item_job.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Company Name"
+        android:text=""
         android:textColor="@color/black_de"
         android:id="@+id/textView_companyName"
         android:layout_alignParentTop="true"
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Pune"
+        android:text=""
         android:id="@+id/textView_joblocation"
         android:layout_below="@+id/textView_companyName"
         android:layout_toRightOf="@+id/imageView4"
