--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -11,7 +11,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".activities.PostLogin.MainScreen">
 
-
+    <!--<com.mikepenz.iconics.view.IconicsTextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Arya Alumni"-->
+        <!--android:textColor="@color/card_background"-->
+        <!--android:textSize="40sp"-->
+        <!--android:layout_marginTop="122dp"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true" />-->
 
     <at.markushi.ui.CircleButton
         android:id="@+id/member"
