--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#616161</item>
+        <item name="colorPrimary">#e53935</item>
 
         <item name="colorPrimaryDark">#424242</item>
         <item name="colorAccent">@color/colorAccent</item>
